# GowikiByRust

./: .gitignore  Cargo.toml  README.md  TestPage.txt
src/: check.rs  handle.rs  lib.rs  main.rs  page.rs  response.rs  templates.rs
src/routes/: edit.rs  mod.rs  save.rs  view.rs
templates/: edit.html  view.html
