[package]
name = "gowiki"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "gowiki"

[dependencies]
lazy_static = "1.4.0"
tera = "1.15.0"
axum = "0.3"
hyper = { version = "0.14.14", features = ["full"] }
tokio = { version = "1.13.0", features = ["full"] }
tower = "0.4.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { "version" = "1", features = ["derive"]}
regex = "1"